# flatbuffers

./: CMakeLists.txt
